--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pylint
+          pip install -r tests/requirements.txt
       - name: Analysing the code with pylint
         run: |
           # pylint $(git ls-files '*.py') # ignore test files for now
