--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -5,13 +5,18 @@ name: mypy type checking
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
-
+    branches: ["main"]
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: ${{ !github.event.pull_request.draft }}
     strategy:
       matrix:
         python-version: ["3.11"]
