--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -8,10 +8,15 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: ${{ !github.event.pull_request.draft }}
     strategy:
       matrix:
         python-version: ["3.11"]
