--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -8,11 +8,15 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-    types: [ready_for_review]
-
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: ${{ !github.event.pull_request.draft }}
     strategy:
       matrix:
         python-version: ["3.11"]
@@ -26,6 +30,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pylint
+          pip install -r tests/requirements.txt
       - name: Analysing the code with pylint
         run: |
           # pylint $(git ls-files '*.py') # ignore test files for now
