--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -27,8 +27,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8
-        python -m pip install sphinx
+        python -m pip install flake8 sphinx
     - name: Build Sphinx
+      working-directory: docs
       run: |
-        cd docs/ && python -m sphinx -T -E -b html -d _build/doctrees -D language=en . _build/html
+        sphinx-apidoc -o apidoc/ ../python2verilog
+        make html
