--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,6 +14,10 @@ build:
     # nodejs: "19"
     # rust: "1.64"
     # golang: "1.19"
+  jobs:
+    pre_build:
+    - sphinx-apidoc -o apidoc/ ../python2verilog
+    - python -m pip install -r tests/requirements.txt
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
