--- a/.github/workflows/templated.yml
+++ b/.github/workflows/templated.yml
@@ -1,58 +1,26 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Sphinx build
 
-on:
-  # Runs on pushes targeting the default branch
-  push:
-    branches: ["sphinx", "main"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+on: push
 
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.11
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-
-      - name: Build Sphinx
+      - uses: actions/checkout@v3
+      - name: Build HTML
         run: |
           python3 -m pip install sphinx
           sphinx-apidoc -o docs/ python2verilog/ -F
           printf "import os\nimport sys\nsys.path.insert(0, os.path.abspath(\"..\"))\n" | cat - docs/conf.py > temp && mv temp docs/conf.py
           make -C docs/ html
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
         with:
-          path: "docs/html"
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+          name: html-docs
+          path: docs/build/html/
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/main'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs/build/html
