--- a/.github/workflows/templated.yml
+++ b/.github/workflows/templated.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build HTML
         run: |
+          python3 -m pip install -r tests/requirements.txt
           python3 -m pip install sphinx
           sphinx-apidoc -o docs/ python2verilog/ -F
           printf "import os\nimport sys\nsys.path.insert(0, os.path.abspath(\"..\"))\n" | cat - docs/conf.py > temp && mv temp docs/conf.py
