--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Build HTML
         run: |
           python3 -m pip install sphinx
-          sphinx-apidoc -o docs/ python2verilog/ -F -H "Python2Verilog" -A "Kerry Wang"
+          sphinx-apidoc -o docs/ python2verilog/ -F -H "python2verilog" -A "Kerry Wang"
           printf "import os\nimport sys\nsys.path.insert(0, os.path.abspath(\"..\"))\nadd_module_names = False\n" | cat - docs/conf.py > temp && mv temp docs/conf.py
           make -C docs/ html
       - name: Upload artifacts
