--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -4,7 +4,7 @@ name: docs
 
 on:
   push:
-    branches: ["main", "sphinx"]
+    branches: ["main"]
   pull_request:
     branches: ["main"]
 
@@ -27,6 +27,7 @@ jobs:
           name: html-docs
           path: docs/_build/html/
       - name: Deploy
+        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'ref/heads/sphinx' }}
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
