--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -40,8 +40,8 @@ jobs:
 
       - name: Run Pytest
         run: |
-          python3 -m pytest -vs tests/ --cov=python2verilog/ --cov-report term-missing --write --synthesis --log-cli-level=info
-
+          python3 -m pytest -vs tests/ --cov=python2verilog/ --cov-report term-missing --log-cli-level=info \
+          --write --synthesis --optimization-levels 0 1 2 4 8
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
