--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "python2verilog"
-version = "0.1.2"
+version = "0.1.4"
 authors = [{ name = "Kerry Wang", email = "kerrywang369@gmail.com" }]
 description = "Converts a subset of python generator functions into synthesizable sequential SystemVerilog"
 readme = "README.md"
@@ -15,4 +15,4 @@ classifiers = [
 "Bug Tracker" = "https://github.com/WorldofKerry/Python2Verilog/issues"
 
 [tool.setuptools]
-"py-modules" = ["python2verilog"]
+"packages" = ["python2verilog"]
