--- a/.pylintrc
+++ b/.pylintrc
@@ -11,6 +11,7 @@ disable =
     too-many-return-statements,
     too-many-arguments,
     too-many-branches,
+    too-many-instance-attributes,
     duplicate-code,
     cyclic-import,
     unused-import,
