--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -27,7 +27,7 @@ jobs:
           name: html-docs
           path: docs/_build/html/
       - name: Deploy
-        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'ref/heads/sphinx' }}
+        if: github.ref == 'refs/heads/main' || github.ref == 'ref/heads/sphinx'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
