--- a/.github/workflows/pytest-complete.yml
+++ b/.github/workflows/pytest-complete.yml
@@ -3,13 +3,20 @@
 name: pytest complete testing
 
 on:
-  workflow_dispatch:
   push:
     branches: ["main"]
+  pull_request:
+    branches: ["main"]
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: ${{ !github.event.pull_request.draft }}
     strategy:
       fail-fast: false
       matrix:
