--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,9 +26,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
       - name: Install package
-        working-directory: build
         run: |
+          mkdir build && cd build
           python3 -m pip install ..
 
       - name: Run Examples
