--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Run Examples
         working-directory: examples
         run: |
+          python3 -m pip install -r requirements.txt
+
           python3 decorator_basic.py
           cat decorator_basic.sv
 
